--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+		<script
+			src="https://kit.fontawesome.com/f71d8b7aef.js"
+			crossorigin="anonymous"
+		></script>
 		<title>TODO LIST</title>
 	</head>
 	<body>
